--- a/scss/blocks/_organizers.scss
+++ b/scss/blocks/_organizers.scss
@@ -11,18 +11,29 @@
 
 	.wordcamp-organizer {
 		display: flex !important;
+		flex-wrap: wrap;
 		position: relative;
 		padding-left: calc-rem( 100px + config( spacing, base ) ) !important;
 		align-items: center;
 		min-height: calc-rem( 100px );
+
+		> * {
+			width: 100%;
+		}
 	}
 
 	.wordcamp-block__item-title {
 		margin-top: auto;
+		font-size: inherit;
+		font-weight: config( typography, primary, weights, bold );
 	}
 
 	.wordcamp-block__item-content {
 		margin-bottom: auto;
+
+		> *:last-of-type {
+			margin-bottom: 0;
+		}
 	}
 
 	.wordcamp-image__avatar-container {
