--- a/css/main.css
+++ b/css/main.css
@@ -405,6 +405,13 @@ h4, .wordcamp-sponsors .wordcamp-sponsors__title,
   text-transform: uppercase;
   margin-bottom: .5rem; }
 
+.wordcamp-speakers.has-grid-columns-4 .wordcamp-speakers__title, .wordcamp-organizers .wordcamp-block__item-title, .wordcamp-live-schedule__title {
+  font-family: Raleway;
+  font-weight: 600;
+  font-size: inherit;
+  text-transform: uppercase;
+  margin-bottom: 0; }
+
 html {
   font-weight: 300;
   background-color: #f6f9fa;
@@ -1069,8 +1076,6 @@ input[type="submit"] {
   .wordcamp-speakers.has-grid-columns-4 .wordcamp-image__avatar-container {
     margin-bottom: 0.75rem; }
   .wordcamp-speakers.has-grid-columns-4 .wordcamp-speakers__title {
-    font-size: inherit;
-    font-weight: 600;
     text-align: center; }
   .wordcamp-speakers.has-grid-columns-4 .wordcamp-image__avatar-link {
     margin-left: auto;
@@ -1203,9 +1208,7 @@ input[type="submit"] {
     .wordcamp-organizers .wordcamp-organizer > * {
       width: 100%; }
   .wordcamp-organizers .wordcamp-block__item-title {
-    margin-top: auto;
-    font-size: inherit;
-    font-weight: 600; }
+    margin-top: auto; }
   .wordcamp-organizers .wordcamp-block__item-content {
     margin-bottom: auto; }
     .wordcamp-organizers .wordcamp-block__item-content > *:last-of-type {
@@ -1217,6 +1220,31 @@ input[type="submit"] {
     position: absolute;
     top: 0;
     left: 0; }
+
+.wordcamp-live-schedule__session {
+  border-top: 1px solid #f0f0f1;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  margin-bottom: 0 !important; }
+  .wordcamp-live-schedule__session a {
+    text-decoration: none; }
+    .wordcamp-live-schedule__session a:hover {
+      text-decoration: underline; }
+
+.wordcamp-live-schedule__session-time,
+.wordcamp-live-schedule__session-speaker {
+  display: inline; }
+
+.wordcamp-live-schedule__session-time:after {
+  content: " - "; }
+
+.wordcamp-live-schedule__session-title {
+  font-size: inherit;
+  font-weight: 600;
+  margin-bottom: 0; }
+
+.wordcamp-live-schedule__session-speaker a {
+  color: inherit; }
 
 .entry-meta {
   position: relative;
