--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@
 @import 'blocks/sponsors';
 @import 'blocks/speakers';
 @import 'blocks/organizers';
+@import 'blocks/schedule';
 @import 'blocks/blog';
 @import 'blocks/more-link';
 
