--- a/scss/blocks/_schedule.scss
+++ b/scss/blocks/_schedule.scss
@@ -19,7 +19,7 @@
 
 .wordcamp-live-schedule__session-time,
 .wordcamp-live-schedule__session-speaker {
-	display: inline;
+	display: inline !important;
 }
 
 .wordcamp-live-schedule__session-time {
