--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,6 +42,7 @@
 @import 'blocks/speakers';
 @import 'blocks/organizers';
 @import 'blocks/schedule';
+@import 'blocks/gallery';
 @import 'blocks/blog';
 @import 'blocks/more-link';
 
