--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,8 @@
 @import 'blocks/organizers';
 @import 'blocks/schedule';
 @import 'blocks/gallery';
+@import 'blocks/split-feature';
+@import 'blocks/content-feature';
 @import 'blocks/blog';
 @import 'blocks/more-link';
 
