--- a/css/main.css
+++ b/css/main.css
@@ -1297,6 +1297,19 @@ input[type="submit"] {
 .split-feature p a {
   display: inline-block !important; }
 
+.content-feature .wp-block-column:first-of-type * {
+  margin-top: 0; }
+
+.content-feature .wp-block-column:nth-of-type(2) * {
+  margin-top: 1.5rem; }
+
+.box {
+  background-color: #8c46a3;
+  padding: 1.5rem; }
+  @media screen and (min-width: 992px) {
+    .box {
+      padding: 3rem; } }
+
 .entry-meta {
   position: relative;
   z-index: 5;
