--- a/scss/blocks/_content-feature.scss
+++ b/scss/blocks/_content-feature.scss
@@ -1,3 +1,15 @@
 .content-feature {
+
+	.wp-block-column:first-of-type {
+		* {
+			margin-top: 0;
+		}
+	}
+
+	.wp-block-column:nth-of-type( 2 ) {
+		* {
+			margin-top: calc-rem( config( spacing, base ) );
+		}
+	}
 	
 }
