--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,6 +45,7 @@
 @import 'blocks/gallery';
 @import 'blocks/split-feature';
 @import 'blocks/content-feature';
+@import 'blocks/box';
 @import 'blocks/blog';
 @import 'blocks/more-link';
 
