--- a/css/main.css
+++ b/css/main.css
@@ -929,8 +929,10 @@ input[type="submit"] {
     @media screen and (min-width: 768px) {
       .wp-block-latest-posts > li {
         padding-right: 3rem; } }
+  .wp-block-latest-posts a {
+    text-decoration: none; }
   .wp-block-latest-posts:not(.is-grid) {
-    margin-bottom: 1.5rem; }
+    margin-bottom: 3rem; }
     .wp-block-latest-posts:not(.is-grid) > li {
       padding-top: 0.75rem;
       padding-bottom: 0.75rem;
@@ -939,7 +941,7 @@ input[type="submit"] {
       .wp-block-latest-posts:not(.is-grid) > li:first-of-type {
         border-top: 1px solid #d6d6d8 !important; }
   .wp-block-latest-posts.is-grid {
-    margin-top: 3rem;
+    margin-top: 1.5rem;
     margin-bottom: 3rem; }
     .wp-block-latest-posts.is-grid > li {
       border-top: none !important;
