--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,7 @@
 @import 'blocks/box';
 @import 'blocks/blog';
 @import 'blocks/more-link';
+@import 'blocks/social';
 
 // Utilities
 @import 'utilities/images';
