--- a/scss/elements/_headings.scss
+++ b/scss/elements/_headings.scss
@@ -21,6 +21,7 @@ h2,
 	@extend %text-style--h2;
 	margin-bottom: calc-rem( config( spacing, base ) * .5 );
 	margin-top: calc-rem( config( spacing, base ) * 2 );
+	line-height: 1;
 }
 
 
