--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,8 @@ h2,
 .split-feature h3,
 .h2 {
   margin-bottom: 0.75rem;
-  margin-top: 3rem; }
+  margin-top: 3rem;
+  line-height: 1; }
 
 h3,
 .wp-block-latest-posts.is-grid > li > a,
@@ -609,7 +610,7 @@ input[type="submit"] {
 .home-hero {
   position: relative;
   z-index: 0;
-  margin-bottom: -15%; }
+  margin-bottom: -5%; }
   @media screen and (min-width: 768px) {
     .home-hero {
       padding-bottom: 20%; } }
@@ -922,6 +923,9 @@ input[type="submit"] {
   padding-left: 20px !important;
   padding-right: 20px !important;
   font-size: 0.875rem; }
+  .wp-block-column .wp-block-latest-posts {
+    padding-left: 0 !important;
+    padding-right: 0 !important; }
   .wp-block-latest-posts > li {
     width: 100%;
     padding-top: 0;
@@ -944,6 +948,9 @@ input[type="submit"] {
   .wp-block-latest-posts.is-grid {
     margin-top: 1.5rem;
     margin-bottom: 3rem; }
+    .wp-block-latest-posts.is-grid.single-column > li {
+      width: 100% !important;
+      margin-right: 0; }
     .wp-block-latest-posts.is-grid > li {
       border-top: none !important;
       border-bottom: none !important;
@@ -1288,6 +1295,8 @@ input[type="submit"] {
 
 .wp-block-gallery {
   margin-bottom: 3rem; }
+  .wp-block-gallery.alignfull {
+    margin-bottom: 0; }
   .wp-block-gallery .blocks-gallery-item {
     margin-right: 0 !important;
     margin-bottom: 0 !important; }
