--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,5 +50,8 @@
 @import 'blocks/more-link';
 @import 'blocks/social';
 
+// Layouts
+@import 'layouts/blog';
+
 // Utilities
 @import 'utilities/images';
