--- a/scss/blocks/_split-feature.scss
+++ b/scss/blocks/_split-feature.scss
@@ -29,6 +29,11 @@
 		@extend %h2;
 	}
 
+	p {
+		text-shadow: 0 0.15rem 1rem rgba( 0,0,0,.8 );
+	    font-weight: 600;
+	}
+
 	a {
 		color: inherit !important;
 		text-decoration: none;
