--- a/scss/utilities/_images.scss
+++ b/scss/utilities/_images.scss
@@ -3,3 +3,20 @@
 	background-repeat: no-repeat;
 	background-position: center;
 }
+
+
+.mt-0 {
+	margin-top: 0;
+}
+
+.mb-0 {
+	margin-bottom: 0;
+}
+
+.pl-0 {
+	padding-left: 0;
+}
+
+.pr-0 {
+	padding-left: 0;
+}
