--- a/scss/layouts/_blog.scss
+++ b/scss/layouts/_blog.scss
@@ -1,23 +1,5 @@
 .blog {
 
-	article.post:first-of-type {
-		.entry-header {
-			&:after {
-				@extend %h1;
-				content: "Blog";
-				display: inline-block;
-			}
-		}
-	}
-
-	article.post + article.post {
-		.entry-header {
-			background: none !important;
-			padding-top: 0;
-			padding-bottom: 0;
-		}
-	}
-
 	.entry-title {
 		@extend %h2;
 
@@ -44,5 +26,105 @@
 				text-decoration: underline;
 			}
 		}
+	}
+
+	.page-title.screen-reader-text {
+		border: 0;
+	    clip: auto !important;
+	    clip-path: none !important;
+	    height: auto;
+	    margin: 0;
+	    overflow: visible;
+	    padding: 0;
+	    position: relative !important;
+	    width: auto !important;
+	    word-wrap: normal!important;
+	}
+
+	.site-main > header {
+		padding-top: 40%;
+		padding-bottom: 20%;
+		background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/wcbne-hero-default.jpg');
+		background-repeat: no-repeat;
+		background-size:  cover;
+		background-position: top center;
+		background-attachment: fixed;
+
+		&:after {
+			content: "";
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background-image: url(https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png);
+		    background-position: bottom center;
+		    bottom: 0;
+		    width: 100%;
+		    height: 100%;
+		}
+
+		h1 {
+			@extend %container;
+			margin-left: auto !important;
+			margin-right: auto !important;
+		}
+	}
+
+	.entry-header {
+		padding-top: 0 !important;
+		padding-bottom: 0 !important;
+		background: none;
+
+		&:after {
+			display: none !important;
+		}
+	}
+
+	.entry-content {
+		margin-top: 0;
+	}
+
+	.entry-image {
+		@media screen and (min-width: 768px) {
+			position: absolute;
+			width: 30%;
+			left: 0;
+			top: 0;
+		}
+	}
+
+	.entry-header,
+	.entry-content,
+	.entry-footer {
+		@media screen and (min-width: 768px) {
+			padding-left: 35%;
+		}
+	}
+
+	.entry-footer p {
+		padding-left: 20px;
+		padding-right: 20px;
+
+		a {
+			text-decoration: none;
+			margin-right: 2rem;
+		}
+	}
+
+	article.post {
+		@extend %container;
+
+		.entry-title {
+			margin-bottom: 0;
+		}
+
+		.entry-meta {
+			margin-bottom: 1rem;
+		}
+	}
+
+	.entry-header:before,
+	.entry-header:after {
+		display: none;
 	}
 }
