--- a/scss/blocks/_aside.scss
+++ b/scss/blocks/_aside.scss
@@ -2,6 +2,8 @@
 .site-footer {
 	background-color: config( colors, dark, base );
 	color: config( colors, dark, contrast );
+	position: relative;
+	z-index: 5;
 
 	a {
 		color: inherit;
