--- a/scss/layouts/_blog.scss
+++ b/scss/layouts/_blog.scss
@@ -39,6 +39,11 @@
 	    position: relative !important;
 	    width: auto !important;
 	    word-wrap: normal!important;
+	    z-index: 5;
+	}
+
+	.site-main {
+		padding-bottom: calc-rem( config( spacing, base ) * 2 );
 	}
 
 	.site-main > header {
@@ -117,7 +122,7 @@
 		@extend %container;
 		
 		@media screen and (min-width: 768px) {
-			min-height: 12.25em;
+			min-height: 14.25em;
 		}
 
 		.entry-title {
@@ -143,4 +148,46 @@
 	.entry-header:after {
 		display: none;
 	}
+}
+
+
+.single-post {
+	.entry-header,
+	.entry-image {
+		position: static;
+	}
+
+	.entry-title {
+		position: relative;
+		z-index: 5;
+	}
+
+	.entry-image img {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 0;
+		width: 100%;
+		height: auto;
+		max-width: none;
+	}
+
+	.entry-header {
+		padding-bottom: 15%;
+	}
+
+	.entry-content {
+	    margin-top: -5%;
+	    position: relative;
+	    z-index: 5;
+	    background-color: config( colors, page, base );
+	    padding-bottom: 0;
+	}
+}
+
+.post-navigation {
+	background-color: #efeef0;
+	padding-top: calc-rem( config( spacing, base ) * 1.5 );
+	padding-bottom: calc-rem( config( spacing, base ) * 1.5 );
+	margin-bottom: 0;
 }
