--- a/css/main.css
+++ b/css/main.css
@@ -1554,12 +1554,17 @@ input[type="submit"] {
 
 .single-post .entry-image img {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
   z-index: 0;
-  width: 100%;
-  height: auto;
-  max-width: none; }
+  width: auto;
+  height: 100%;
+  max-width: none;
+  transform: translate(-50%, -50%); }
+  @media screen and (min-width: 768px) {
+    .single-post .entry-image img {
+      width: 100%;
+      height: auto; } }
 
 .single-post .entry-header {
   padding-bottom: 15%; }
@@ -1569,13 +1574,14 @@ input[type="submit"] {
   position: relative;
   z-index: 5;
   background-color: #f6f9fa;
-  padding-bottom: 0; }
+  padding-bottom: 0;
+  padding-bottom: 3rem; }
 
 .post-navigation {
   background-color: #efeef0;
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
-  margin-bottom: 0; }
+  margin-bottom: 0 !important; }
 
 .entry-header,
 .home-hero {
