--- a/css/main.css
+++ b/css/main.css
@@ -602,6 +602,7 @@ input[type="submit"] {
   .home-hero:after {
     padding-bottom: 60.75%;
     background-image: url("https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png");
+    background-size: 100% auto;
     background-position: bottom center;
     bottom: 0; }
 
@@ -1461,6 +1462,8 @@ input[type="submit"] {
   margin: 0;
   overflow: visible;
   padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
   position: relative !important;
   width: auto !important;
   word-wrap: normal !important;
@@ -1487,6 +1490,7 @@ input[type="submit"] {
     left: 0;
     background-image: url(https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png);
     background-position: bottom center;
+    background-size: 100% auto;
     bottom: 0;
     width: 100%;
     height: 100%; }
