--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -46,6 +46,7 @@
 	&:after {
 		padding-bottom: 60.75%;
 		background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png');
+		background-size: 100% auto;
 		background-position: bottom center;
 		bottom: 0;
 	}
