--- a/scss/layouts/_blog.scss
+++ b/scss/layouts/_blog.scss
@@ -36,6 +36,8 @@
 	    margin: 0;
 	    overflow: visible;
 	    padding: 0;
+	    padding-left: 20px;
+	    padding-right: 20px;
 	    position: relative !important;
 	    width: auto !important;
 	    word-wrap: normal!important;
@@ -65,6 +67,7 @@
 			left: 0;
 			background-image: url(https://2020.brisbane.wordcamp.org/files/2019/12/image-mask.png);
 		    background-position: bottom center;
+		    background-size: 100% auto;
 		    bottom: 0;
 		    width: 100%;
 		    height: 100%;
